<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_secondary">

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/tricolor_bar_horizontal" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_loading_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="32dp">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_onip_logo" />

            <TextView
                style="@style/OnipBrandTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="ONIP RH"
                android:textAlignment="center" />

            <TextView
                style="@style/OnipSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/app_subtitle"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_loading_status"
                style="@style/Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/loading_simple"
                android:textAlignment="center" />

            <ProgressBar
                android:id="@+id/progress_loading"
                style="@style/ProgressBarFlat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:max="100"
                android:progress="0" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_settings_loading"
            style="@style/ButtonSettings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="top|end"
            android:layout_margin="12dp"
            android:contentDescription="@string/btn_settings" />

    </FrameLayout>

</LinearLayout>
